fixed the issue of the nav bar not showing up

--- a/customCSS/participantViewStyle.css
+++ b/customCSS/participantViewStyle.css
@@ -5,28 +5,46 @@ html{
     vertical-align: center;
 }
 
-header{
-    background-color: aliceblue;
-    border-radius: 10px;
 
-}
-
-th, td{
+th, tr, td{
     border: 1px solid;
     text-align: center;
     vertical-align: center;
-    /*border-collapse: collapse;*/
+    border-collapse: collapse;
+    background-color: white;
     border-radius: 8px;
+    padding:3px;
+    margin:25px;
+
 }
 
 th{
     background-color: #C0C0C0;
 }
 
-td{
-    background-color: white;
+table{
+    width: 100%;
+    border-spacing: 15px;
 }
 
-#totalStudents{
-    font-weight: bold;
+header{
+    vertical-align: center;
+    width: 100%;
+    color: #000000;
+    font-style: bold;
+    background-color: white;
+    border-radius: 10px;
+}
+
+h1{
+    margin-left: auto;
+    margin-right: auto;
+    width: 16em;
+    vertical-align: center;
+    /* width: 60%; */
+    color: #000000;
+    font-style: bold;
+    background-color: #e2e1e1;
+    border-radius: 20px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.164);
 }
